# simple-todo

./: .coverage  .gitignore  LICENSE.md  README.md  __init__.py  main.py  pyproject.toml  setup.cfg  test.py
.github/workflows/: ci.yml
SimpleTodo/item_editor/: attribute_dict.py
SimpleTodo/miniview/: main.py
SimpleTodo/todo/: __init__.py  format.py  item.py
items/: attr_to_str.py  item_editor.py  todo_item.py
src/SimpleTodo/todo/: __init__.py  format.py  item.py
src/items/: _show.py  item_editor.py  todo_item.py
src/miniview/: main.py
tests/: test.py  test_todo.py  test_todo_item.py
tests/items/: item_test.py  test_todo_item.py
