[metadata]
name = SimpleTodo
description = Todo list application with minimalist design

[options]
packages =
    SimpleTodo
install_requires =
    screeninfo>=0.8
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    tox>=3.24

#[options.package_data]
#todo = py.typed

[flake8]
max-line-length = 160