[metadata]
name = SimpleTodo
description = Todo list application with minimalist design

[options]
packages =
    src
install_requires =
    screeninfo>=0.8
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
